@@ -12,3 +12,9 @@ libraryDependencies += "org.apache.spark" %% "spark-streaming" % sparkVersion
 libraryDependencies += "org.apache.bahir" %% "spark-streaming-twitter" % "2.1.0"
 libraryDependencies += "edu.stanford.nlp" % "stanford-corenlp" % "3.7.0" artifacts (Artifact("stanford-corenlp", "models"), Artifact("stanford-corenlp"))
 libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.3"
+libraryDependencies += "com.holdenkarau" %% "spark-testing-base" % "2.2.0_0.7.2" % "test"
+
+fork in Test := true
+parallelExecution in Test := false
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+
